tests/codegen/fail/interface/struct/attr_unnamed_field.stderr
error: GraphQL interface expected named struct field
       · note: https://spec.graphql.org/October2021#sec-Interfaces

 --> fail/interface/struct/attr_unnamed_field.rs:4:18
  |
4 | struct Character(i32);
  |                  ^^^
